--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Плюшки от Андрюшки</title>
-    <link type="image/x-icon" href="img/logo.ico" rel="shortcut icon">
+    <link type="image/x-icon" href="logo.ico" rel="shortcut icon">
     <link rel="stylesheet" href="style.css"> 
     <script type="text/javascript" src="app.js" defer=""></script>
 
