--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     </div>
 
     </section>
-    <video src="https://www.youtube.com/watch?v=W7J3rsAzkwg&list=PLux1MgXivR1RvDzv5sELIjj1uWRCscGX1&index=1" controls style="height: 600px; width: 40%;"></video>
+    <video src="1.mp4></video>
 
     <button id="scrollToTopButton">Вверх</button>
 
