--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
 <footer style="width: 50%;">
 
   <div class="social-icons">
-    <a href="https://web.telegram.org/" class="social-icon"><img src="tg.webp" alt="Tg"></a>
-    <a href="https://m.vk.com/" class="social-icon"><img src="vk.png" alt="Vk"></a>
+    <a href="https://web.telegram.org/" class="social-icon"><img src="img/tg.webp" alt="Tg"></a>
+    <a href="https://m.vk.com/" class="social-icon"><img src="img/vk.png" alt="Vk"></a>
   </div>
   
 </footer>
