--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Плюшки от Андрюшки</title>
-    <link type="image/x-icon" href="img/logo.ico" rel="shortcut icon">
+    <link type="image/x-icon" href="logo.ico" rel="shortcut icon">
     <link rel="stylesheet" href="style.css"> 
     <script type="text/javascript" src="app.js" defer=""></script>
 
@@ -14,7 +14,7 @@
   <header>
 
     <div class="logo">
-        <img src="img/logo.jpg">
+        <img src="logo.jpg">
     </div>
 
     <h1 class="site-title">Плюшки от Андрюшки</h1>
@@ -33,10 +33,10 @@
 
     <div class="slider-container">
         <div class="slider">
-          <img src="img/1.jpg"  height="100px" onclick="openFullscreenImage(this)">
-          <img src="img/2.jpg"  height="100px" onclick="openFullscreenImage(this)">
-          <img src="img/3.jpg"  height="100px" onclick="openFullscreenImage(this)">
-          <img src="img/4.jpg"  height="100px" onclick="openFullscreenImage(this)">
+          <img src="1.jpg"  height="100px" onclick="openFullscreenImage(this)">
+          <img src="2.jpg"  height="100px" onclick="openFullscreenImage(this)">
+          <img src="3.jpg"  height="100px" onclick="openFullscreenImage(this)">
+          <img src="4.jpg"  height="100px" onclick="openFullscreenImage(this)">
         </div>
         <button class="prev-button" aria-label="Посмотреть предыдущий слайд">&lt;</button>
         <button class="next-button" aria-label="Посмотреть следующий слайд">&gt</button>  
@@ -62,7 +62,7 @@
       <div class="column">
 
         <h2>Мой рецепт Наполеона</h2>
-        <img src="img/5.jpg" class="pic" onclick="openFullscreenImage(this)">
+        <img src="5.jpg" class="pic" onclick="openFullscreenImage(this)">
         <p>Продукты
             Для коржей:
             Мука - 750 г
@@ -171,7 +171,7 @@
     </div>
     <div class="column">
         <h2>Мой рецепт плюшек</h2>
-        <img src="img/6.jpg" class="pic" onclick="openFullscreenImage(this)">
+        <img src="6.jpg" class="pic" onclick="openFullscreenImage(this)">
         <p>Продукты
             Для теста:
             Молоко (тёплое) - 250 мл
@@ -237,7 +237,7 @@
 
         <div class="column">
             <h2>Авторские Капкейки "Брауни"</h2>
-            <img src="img/7.jpg" class="pic" onclick="openFullscreenImage(this)">
+            <img src="7.jpg" class="pic" onclick="openFullscreenImage(this)">
             <p>Продукты (на 12 порций)
                 Масло сливочное - 180 г
                 Шоколад - 100 г
@@ -271,7 +271,7 @@
     </div>
 
     </section>
-    <video src="video/1.mp4" controls style="height: 600px; width: 100%;"></video>
+    <video src="1.mp4" controls style="height: 600px; width: 100%;"></video>
 
     <button id="scrollToTopButton">Вверх</button>
 
@@ -281,8 +281,8 @@
 <footer style="width: 100%;">
 
   <div class="social-icons">
-    <a href="https://web.telegram.org/" class="social-icon"><img src="img/tg.webp" alt="Tg"></a>
-    <a href="https://m.vk.com/" class="social-icon"><img src="img/vk.png" alt="Vk"></a>
+    <a href="https://web.telegram.org/" class="social-icon"><img src="tg.webp" alt="Tg"></a>
+    <a href="https://m.vk.com/" class="social-icon"><img src="vk.png" alt="Vk"></a>
   </div>
   
 </footer>
