--- a/index.html
+++ b/index.html
@@ -274,6 +274,10 @@
     <video src="1.mp4" controls style="height: 600px; width: 100%;"></video>
 
     <button id="scrollToTopButton">Вверх</button>
+    <div class="str"></div>
+<input class="input-num" type="text">
+<button class="btn">Отправить</button>
+</div>
 
 
 </body>
@@ -284,6 +288,34 @@
     <a href="https://web.telegram.org/" class="social-icon"><img src="tg.webp" alt="Tg"></a>
     <a href="https://m.vk.com/" class="social-icon"><img src="vk.png" alt="Vk"></a>
   </div>
+  <script type="text/javascript">
+let str = document.querySelector(".str"); // Берём элемент строки
+let btn = document.querySelector(".btn"); // Берём элемент кнопки
+
+let num1 = Math.ceil(Math.random() * 10); // Получаем рандомное число один
+let num2 = Math.ceil(Math.random() * 10); // Получаем рандомное число два
+let res = num1 + num2; // Результат сложение этих чисел
+
+// Выводим строчку ворожения
+str.innerHTML = `${num1} + ${num2} = `;
+
+// События нажатия на кнопку
+btn.addEventListener("click", function () {
+// Получаем значение из input
+let inputNum = document.querySelector(".input-num").value;
+// Переводим в числовой тип данных
+inputNum = parseInt(inputNum);
+// Условие, если значение из input равно результат
+if (inputNum === res) {
+// То выводит в консоль "Вход разрешён"
+alert("Вход разрешён");
+} else {
+// Иначе выводит "Вход запрещен"
+alert("Вход запрещен");
+}
+
+});
+</script>
   
 </footer>
 
